@@ -1326,7 +1326,8 @@ typedef enum
     GPGME_ENCRYPT_THROW_KEYIDS = 64,
     GPGME_ENCRYPT_WRAP = 128,
     GPGME_ENCRYPT_WANT_ADDRESS = 256,
-    GPGME_ENCRYPT_ARCHIVE = 512
+    GPGME_ENCRYPT_ARCHIVE = 512,
+    GPGME_ENCRYPT_FILE = 1024
   }
 gpgme_encrypt_flags_t;
 
